# JWT_auth

./: README.md  TODO.md  check_env.py  pyproject.toml
apps/accounts/: READ.me  README.md  ReadME.md  apps.py  emails.py  models.py  serializers.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_random.py  0003_profile_delete_random.py  0004_customuser_groups_customuser_is_active_and_more.py  0005_add_username_to_customuser.py  0006_add_otp_fields.py
config/: settings.py  settings_fixed.py  urls.py
